# cmakedemo

./: .gitiggnore  .gitignore  README.md  TC-mingw.cmake  Toolchain-eldk-mips4k.cmake
AP_UNIX/: Makefile  accessdemo  accessdemo.c  account-demo.c  acct.c  add2.c  add2_standardIO.c  alarm.c  change-intr.c  chk-lck.c  chmoddemo.c  cs_43pbsd.c  cs_svr4.c  daemon-func.c  daemon-lock.c  db-create.c  db.c  db.h  deadlock-demo.c  do-sleep2.c  dodriver.c  double-fork.c  echoall.c  errordemo  errordemo.c  exec-demo.c  exec_add2.c  exec_myuclc.c  exit-demo.c  exit_demo.c  fifo-reads.c  fifo-writes.c  file.list  file2pager.c  file2popen.c  fileinfo  fileinfo.c  filter_char.c  fork_demo.c  func.c  (+130 more)
AP_UNIX/chapter18/: Makefile  call.c  call.h  calld.h  childdial.c  cli_assist.c  cli_loop.c  cliargs.c  client-main.c  client.c  cs_43pbsd.c  ctlstr.c  debug.c  devfile.c  dialfile.c  doescape.c  expectstr.c  file-func.c  lock.c  loop.c  opend.c  opend.h  ourhdr.c  ourhdr.h  proc_com_43pbds.c  put.c  request.c  sendstr.c  server-main.c  sigchld.c  sleepus.c  sysfile.c  take.c  term-func.c  tty_open.c  ttydial.c
Gromit/: CMakeLists.txt
Gromit/pkg/: gromit-config-version.cmake.in  gromit-config.cmake.in
HelloWorld/doc/: hello.txt
Tests/Tutorial/: CMakeLists.txt  CTestConfig.cmake  TutorialConfig.h.in  myScript.cmake  tutorial.cxx
Tests/Tutorial/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx  mysqrt.h
gdb/: charset-test  charset-test.c  sample  sample.c  tst  tst.c
makefiledemo/: Makefile  main  main.c
makefiledemo/subdir/: Makefile  main  main.c
shdemo/: demo1.sh  demo2.sh  exprstr.sh  exprtest.sh  funsh.sh  inputsh.sh  loopsh.sh  shfile.sh  test.sh  test2.sh  test3.sh  test4.sh  test5.sh  testpara.sh  users
t1/: CMakeLists.txt  CTestConfig.cmake  CTestCustom.ctest  doc1.tex  main.c  message.cmake  myScript.cmake  projectConfigure.h  projectConfigure.h.in
t1/data/scripts/: 1.html
t1/doc/: README
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.c  my-util.py
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h  libhello.so.1.2  testlib.py
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: 2  CMakeLists.txt  test macro argc argv
t6/cmake/: FindHELLO.cmake  FindPNG.cmake  FindZLIB.cmake
t6/src/: CMakeLists.txt
testfoobar/: CMakeCache.txt  CMakeLists.txt  Makefile  TestByteOrder.c  TestByteOrder.cmake  cmake_install.cmake  testNeedFoobar.c  testNeedFoobar.cmake
