CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(HELLO)
ENABLE_LANGUAGE(CXX C)

#SET(SRC_LIST main.c)
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
#ADD_EXECUTABLE(hello ${SRC_LIST})
ADD_SUBDIRECTORY(src bin)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2 PERMISSIONS OWNER_WRITE OWNER_READ)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)

