ADD_EXECUTABLE(hello main.c)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin
    CACHE PATH
    "Single directory for all executables")
mark_as_advanced (
    EXECUTABLE_OUTPUT_PATH)

INSTALL(PROGRAMS ${PROJECT_SOURCE_DIR}/bin/hello DESTINATION bin)
INSTALL(PROGRAMS ${PROJECT_SOURCE_DIR}/src/my-util.py DESTINATION bin)
